k8s/app1/app1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  #type: NodePort
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app1
