k8s/app1/app1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - hosts: 
    - app1.cloud63.fr
    secretName: app1.cloud63.fr
  rules:
  - host: app1.cloud63.fr
    http:
      paths:
      - backend:
          service:
            name: app1
            port:
              number: 80
        path: /
        pathType: Prefix
